could not get the image to the top left.

--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
     <title>Whitewater Rafting Vacations | Dry Oar Boating | Home</title>
     <link rel="stylesheet" href="styles/style.css">
 </head>
-
 <body>
     <div class="content">
         <header>
@@ -51,34 +50,36 @@
                 <h2>Rapids</h2>
             </section>
             <div class="background">
-            
-            <img class="mountains" src="images/mountains.jpeg" alt="Misty mountains">
-            <section class="msg">
-                <h2>More Than Just The Thrill</h2>
-                <p>Enjoy the breathtaking scenery. From valleys, meadows, canyons, and high peaks; it's way more than
-                    just the rapids. It's a great way to get away from it all and relax amongst all the beauty of the
-                    great outdoors. </p>
-                <a class='join' href="rivers.html">Join Us</a>
-            </section>
+
+                <img class="mountains" src="images/mountains.jpeg" alt="Misty mountains">
+                <section class="msg">
+                    <h2>More Than Just The Thrill</h2>
+                    <p>Enjoy the breathtaking scenery. From valleys, meadows, canyons, and high peaks; it's way more
+                        than
+                        just the rapids. It's a great way to get away from it all and relax amongst all the beauty of
+                        the
+                        great outdoors. </p>
+                    <a class='join' href="rivers.html">Join Us</a>
+                </section>
         </main>
         <div class="footer">
-        <footer>
-            <p>Dry Oar &copy; 2022 - Sheldon Medeiros</p>
-            <p><a href="site-plan-rafting.html">Site Plan</a></p>
-            <p><a href="contactus.html">Contact Us</a></p>
-            <div class="social">
-                <a href="https://facebook.com" target="_blank">
-                    <img src="images/facebook.png" alt="fb icon">
-                </a>
-                <a href="https://twitter.com">
-                    <img src="images/twitter.png" alt="twitter icon">
-                </a>
-                <a href="https://instagram.com">
-                    <img src="images/instagram.png" alt="instagram icon">
-                </a>
-            </div>
-        </footer>
-    </div>
+            <footer>
+                <p>Dry Oar &copy; 2022 - Sheldon Medeiros</p>
+                <p><a href="site-plan-rafting.html">Site Plan</a></p>
+                <p><a href="contactus.html">Contact Us</a></p>
+                <div class="social">
+                    <a href="https://facebook.com" target="_blank">
+                        <img src="images/facebook.png" alt="fb icon">
+                    </a>
+                    <a href="https://twitter.com">
+                        <img src="images/twitter.png" alt="twitter icon">
+                    </a>
+                    <a href="https://instagram.com">
+                        <img src="images/instagram.png" alt="instagram icon">
+                    </a>
+                </div>
+            </footer>
+        </div>
 </body>
 
 </html>
