--- a/podcast/podcast.html
+++ b/podcast/podcast.html
@@ -129,18 +129,18 @@
         <img src="#" alt="image for homepage">
 
       </ul>
-      <h3>[Page 2]</h3>
+      <h3>Episodes</h3>
       <p>
-        [Written copy for the Page 2 here]
+        [This is for the episodes that we will upload and so that you can access them easier.]
       </p>
       <p>Images for the Page 2</p>
         <img src="#" alt="image for page">
         <img src="#" alt="image for page">
 
       </ul>
-      <h3>[Page 3]</h3>
+      <h3>Social and about.</h3>
       <p>
-        [Written copy for the Page 3 here]
+        [Our names and our social handels and where they can find us on other sites. what to expect from both of us.]
       </p>
       <p>Images for the Page 3</p>
         <img src="#" alt="image for page3">
