--- a/podcast/podcast.html
+++ b/podcast/podcast.html
@@ -59,10 +59,12 @@
       <!-- Choose a font for your paragraphs (body copy) and headlines. What font(s) have you chosen? Why did you choose what you did?  Make sure to review the list of web safe fonts at W3Schools.org as a starting point.  Think also about which of your colors above you might use for background and font colors. -->
 
       <h4>
-        Heading Font: Calibri, Times, sans-serif;  <!-- change this -->
+        Heading Font: Calibri, Times, sans-serif; 
+        The reason for this change is because I like the font and it looks classy. I like how it mash with the theme of the podcast and it just a nice font to have. <!-- change this -->
       </h4>
       <h4>
-        Paragraph Font: Lato, Helvetica, sans-serif  <!-- change this -->
+        Paragraph Font: Lato, Helvetica, sans-serif 
+        This was another choice I was fooling around with and it peaked my intrested in this order because it has caught my eye. <!-- change this -->
       </h4>
       <h3>
         Normal paragraph example
@@ -97,10 +99,10 @@
           Home
         </div>
         <div class="sm-page2">
-          [Page2] <!-- change this -->
+          [Episodes] <!-- change this -->
         </div>
         <div class="sm-page3">
-          [Page3]  <!-- change this -->
+          [About page. meet the content crew.]  <!-- change this -->
         </div>
 
         <div class="top">
@@ -125,8 +127,8 @@
         [Written copy for the home page here]
       </p>
       <p>Images for the Home page</p>
-        <img src="#" alt="image for homepage">
-        <img src="#" alt="image for homepage">
+        <img src="pictures/pexels-asad-photo-maldives-1450353.jpg" alt="image for homepage">
+        <img src="pictures/pexels-asad-photo-maldives-457878.jpg" alt="image for homepage">
 
       </ul>
       <h3>Episodes</h3>
@@ -134,8 +136,8 @@
         [This is for the episodes that we will upload and so that you can access them easier.]
       </p>
       <p>Images for the Page 2</p>
-        <img src="#" alt="image for page">
-        <img src="#" alt="image for page">
+        <img src="pictures/pexels-cottonbro-studio-4631071.jpg" alt="image for page">
+        <img src="pictures/pexels-laker-6157079.jpg" alt="image for page">
 
       </ul>
       <h3>Social and about.</h3>
@@ -143,8 +145,8 @@
         [Our names and our social handels and where they can find us on other sites. what to expect from both of us.]
       </p>
       <p>Images for the Page 3</p>
-        <img src="#" alt="image for page3">
-        <img src="#" alt="image for page3">
+        <img src="pictures/pexels-max-griss-11701936.jpg" alt="image for page3">
+        <img src="pictures/pexels-rachel-claire-6127447.jpg" alt="image for page3">
 
       </ul>
       <hr>
@@ -158,19 +160,19 @@
       <p>         
         [Any additional details about home that the wireframe does not make clear]
       </p>
-      <img src="#" alt="home page wireframe">
+      <img src="pictures/Screenshot 2022-11-12 202330.png" alt="home page wireframe">
 
-      <h3>[Page 2]</h3>
+      <h3>Episode</h3>
       <p>         
         [Any additional details about page 2 that the wireframe does not make clear]
       </p>
-      <img src="#" alt="page 2 wireframe">
+      <img src="pictures/Screenshot 2022-11-12 202418.png" alt="page 2 wireframe">
 
-      <h3>[Page 3]</h3>
+      <h3>Social</h3>
       <p>         
         [Any additional details about page 3 that the wireframe does not make clear]
       </p>
-      <img src="#" alt="page 3 wireframe">
+      <img src="pictures/Screenshot 2022-11-12 202450.png" alt="page 3 wireframe">
     </main>
   </body>
 
