new added pages for my final

--- a/podcast/contactus.html
+++ b/podcast/contactus.html
@@ -1,29 +1,61 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
+<html lang="en"><head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Coconut Vibes Contact Us</title>
+    <link rel="stylesheet" href="homepage.css">
 </head>
 <body>
-    <header>
+    <div id="content">
+        <header>
+            <a id="logo_link" href="index.html">
+                <img src="pictures/logo.png" alt="coconut" class="logo">
+            </a>
+            <nav>
+                <a href="homepage.html" id="homelink">Home</a>
+                <a href="episodes.html" id="contentlink">Episodes</a>
+                <a href="podcast.html" id="siteplanlink">Site Plan</a>
+                <a href="contactus.html" id="contactlink">Contact Us</a>
+            </nav>
+        </header>
+        <h1>Content Creators</h1>
+        <div class="flip-card">
+            <div class="flip-card-inner">
+              <div class="flip-card-front">
+                <img src="pictures/lando" alt="Lando" class="img" height="500">
+              </div>
+              <div class="flip-card-back">
+                <h1>GeneralDiops</h1>
+                <p>This is GeneralDiops. A local boy that is from the island of Hawaii and gre up in many different towns. His dreams is to be a full time content creator and has been on the grind for 1-2 years with out missing a day. He is Micronesian and he love to have fun and he just is a chill streamer no hate for anyone expect for campers and rats. He plays a lot of COD but also Battlefeild and some other RPG games. Check him out.</p>
+                <p><a href="https://www.youtube.com/@GeneralDiops" class="gerenrallink">Youtube</a></p>
+                <p><a href="https://www.tiktok.com/@generaldiops" class="generaltiklink">TikTok</a></p>
+                <p><a href="https://www.facebook.com/GeneralDiops" class="generalfb">Facebook</a></p>
+                <p><a href="https://www.twitch.tv/generaldiops" class="twtichgeneral">Twtich</a></p>
+              </div>
+            </div>
+          </div>
+          <div class="flip-card">
+            <div class="flip-card-inner">
+              <div class="flip-card-front">
+                <img src="pictures/sheldon.jpg" alt="Sheldon" class="img" height="500">
+              </div>
+              <div class="flip-card-back">
+                <h1>TheJollyPoly</h1>
+                <p>My name is the TheJollyPoly across gaming and the gaming world. I play a lot of games but do not stream at all. I tried to get into it but my passion is tech and so I am going through school while doing this podcast. My name is Sheldon and I am a chill easy loving guy and just loves to have a good time and talk with people.</p>
+                <p><a href="https://www.youtube.com/@CoconutVibez/streams" class="cocolink">Link to the Podcast</a></p>
+                <p><a href="twitch.tv/thejollypoly" class="polylink">Link to the twitch</a></p>
+              </div>
+            </div>
+          </div>
+          <footer>
+            <h3>Coconut vibez© 2022 - Sheldon Medeiros</h3>
+            <h3><a href="podcast.html">Site Plan</a></h3>
+            <h3><a href="contactus.html">Contact Us</a></h3>
+            <h3><a href= "homepage.html">Home Page</a></h3>
+                </a>
+            </div>
+        </footer>
+    </div>
 
-        <nav>
-
-        </nav>
-
-    </header>
-
-    <main>
-
-    </main>
-
-    <footer>
-        <h3><a href="podcast.html">Site Plan</a></h3>
-        <h3><a href="episodes.html">Page 2 (Episodes)</a></h3>
-        <h3><a href="aboutus.html">Page 3 (About us (Contact Page)</a></h3>
-    </footer>
-    
-</body>
-</html>
+</body></html>
