--- a/podcast/episodes.html
+++ b/podcast/episodes.html
@@ -1,29 +1,53 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
+<html lang="en"><head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Episodes</title>
+    <link rel="stylesheet" href="homepage.css">
 </head>
 <body>
-    <header>
+    <div id="content">
+        <header>
+            <a id="logo_link" href="index.html">
+                <img src="pictures/logo.png" alt="Sais Logo" class="logo">
+            </a>
+            <nav>
+                <a href="homepage.html" id="homelink">Home</a>
+                <a href="site-plan.html" id="siteplanlink">Site Plan</a>
+                <a href="contactus.html" id="contactlink">Contact Us</a>
+            </nav>
+        </header>
+        <div id="hero">
+            <div>
+                <img src="pictures/pexels-asad-photo-maldives-457878.jpg" alt="Beach" id="hero-Sais">
+            </div>
+        </div>
+        <main>
+            <h1>Episodes</h1>
+            <img src="pictures/pexels-laker-6157079.jpg" alt="coconut" id="img_pohn">
+            <div id="saisp">
+                <p>This is where you will be able to see the episodes once we have them uploaded and they will be uploaded wekkly and stay tune for more updates and all that! Thanks for visiting the site and the support.</p>
+            </div>
+                <h1>Latest Episodes</h1>
+            <div class="slider">
+                <span style="--i:1;"> <img src="episode 1" alt="eposide 1"></span>
+                <span style="--i:2;"> <img src="eposide 2" alt="eposide 2"></span>
+                <span style="--i:3;"> <img src="episode 3" alt="episode 3"></span>
+                <span style="--i:4;"> <img src="episode 4 " alt="episode 4"></span>
+                <span style="--i:5;"> <img src="episode 5" alt="episode 5"></span>
+                <span style="--i:6;"> <img src="eopisode 6" alt="episode 6"></span>
+                <span style="--i:7;"> <img src="episode 7" alt="episode 7"></span>
+                <span style="--i:8;"> <img src="episode 8" alt="episode 8"></span>
+            </div>
+        </main>
+        <footer>
+            <h3>Coconut Vibez © 2022 - Sheldon Medeiros</h3>
+            <h3><a href="homepage.html">Home</a></h3>
+            <h3><a href="site-plan.html">Site Plan</a></h3>
+            <h3><a href="contactus.html">Contact Us</a></h3>
+                </a>
+            </div>
+        </footer>
+    </div>
 
-        <nav>
-
-        </nav>
-
-    </header>
-
-    <main>
-
-    </main>
-
-    <footer>
-        <h3><a href="podcast.html">Site Plan</a></h3>
-        <h3><a href="episodes.html">Page 2 (Episodes)</a></h3>
-        <h3><a href="aboutus.html">Page 3 (About us (Contact Page)</a></h3>
-    </footer>
-    
-</body>
-</html>
+</body></html>
