forgot to link the page

--- a/podcast/episodes.html
+++ b/podcast/episodes.html
@@ -13,7 +13,7 @@
             </a>
             <nav>
                 <a href="homepage.html" id="homelink">Home</a>
-                <a href="site-plan.html" id="siteplanlink">Site Plan</a>
+                <a href="podcast.html" id="siteplanlink">Site Plan</a>
                 <a href="contactus.html" id="contactlink">Contact Us</a>
             </nav>
         </header>
@@ -43,7 +43,7 @@
         <footer>
             <h3>Coconut Vibez © 2022 - Sheldon Medeiros</h3>
             <h3><a href="homepage.html">Home</a></h3>
-            <h3><a href="site-plan.html">Site Plan</a></h3>
+            <h3><a href="podcast.html">Site Plan</a></h3>
             <h3><a href="contactus.html">Contact Us</a></h3>
                 </a>
             </div>
