Updating never stops.

--- a/podcast/homepage.html
+++ b/podcast/homepage.html
@@ -13,9 +13,8 @@
             <img src="pictures/logo.png" alt="Logo image" class="pic">
             <nav>
                 <a href="podcast.html" id="homelink">Site Plan</a>
-                <a href="episodes.html" id="episode">Page 2 (Episodes)</a>
-                <a href="aboutus.html"id="about">Page 3 (About us)</a>
-                <a href="contactus.html" id="contact">Page 4 (Contact us)</a>
+                <a href="episodes.html" id="episode"></a>Episodes</a>
+                <a href="contactus.html" id="contact">Contact us</a>
             </nav>
         </header>
 
